xml/src1/objects/Pastoral_Acts__c.object
<CustomObject>
    <description>Pastoral Acts</description>
    <fields>
        <fullName>Act_Performed__c</fullName>
        <label>Act Performed</label>
        <picklist>
            <picklistValues>
                <fullName>Baptism</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Profession of Faith</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Transfer</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Act_Performed_for__c</fullName>
        <description>Act Performed for</description>
        <inlineHelpText>Name of person for whom act was performed (initiated)</inlineHelpText>
        <label>Act Performed for</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Address_Line_1__c</fullName>
        <description>Address Line 1</description>
        <inlineHelpText>If infant/youth, enter parents address. Otherwise, enter address of person for whom act was performed (initiated)</inlineHelpText>
        <label>Address Line 1</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Address_Line_2__c</fullName>
        <description>Address Line 2</description>
        <label>Address Line 2</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Baptism_Age__c</fullName>
        <description>Baptism Age</description>
        <label>Baptism Age</label>
        <picklist>
            <controllingField>Act_Performed__c</controllingField>
            <picklistValues>
                <fullName>Adult</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Infant/Youth</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>City__c</fullName>
        <description>City</description>
        <label>City</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Clergy_Email__c</fullName>
        <label>Clergy Email</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Clergy_FirstName__c</fullName>
        <label>Clergy First Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Clergy_LastName__c</fullName>
        <label>Clergy Last Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Clergy_Phone_Number__c</fullName>
        <label>Clergy Phone Number</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Pastoral Acts related to Contact</description>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Pastoral Acts</relationshipLabel>
        <relationshipName>Pastoral_Acts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Country__c</fullName>
        <description>Country</description>
        <label>Country</label>
        <picklist>
            <picklistValues>
                <fullName>Missing</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>UNITED STATES OF AMERICA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AFGHANISTAN</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ALBANIA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ALGERIA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AMERICAN SAMOA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ANDORRA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ANGOLA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ANGUILLA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ANTIGUA &amp; BARBUDA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ARGENTINA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ARMENIA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ARUBA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AUSTRALIA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AUSTRIA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AZERBAIJAN</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BAHAMAS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BAHRAIN</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BANGLADESH</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BARBADOS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BELARUS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BELGIUM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BELIZE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BENIN</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BERMUDA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BHUTAN</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BOLIVIA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BOSNIA AND HERZEGOVINA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BOTSWANA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BRAZIL</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Date_Act_Performed__c</fullName>
        <description>Baptism Performed Date</description>
        <inlineHelpText>For Date baptism, profession of faith, or transfer completed</inlineHelpText>
        <label>Date Act Performed</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_of_Birth__c</fullName>
        <description>Date of Birth</description>
        <label>Date of Birth</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>GBHEM_DataCenter_Pastoral_Act_Id__c</fullName>
        <externalId>true</externalId>
        <label>GBHEM DataCenter Pastoral Act Id</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>InfantYouth_Parents_Name__c</fullName>
        <description>Parents Name only if Infant/Youth</description>
        <inlineHelpText>If Infant/Youth baptism, enter parent name</inlineHelpText>
        <label>Infant/Youth Parent’s Name</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Location_of_Act__c</fullName>
        <description>Baptism Location</description>
        <inlineHelpText>Where the act was performed</inlineHelpText>
        <label>Location of Act</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Remarks__c</fullName>
        <description>Remarks on Pastoral Acts</description>
        <label>Remarks</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Report_PA_Age__c</fullName>
        <description>Reports to get the Age for Act performed Age</description>
        <formula>IF(  ISPICKVAL( Act_Performed__c , &apos;Baptism&apos;) &amp;&amp;  ISPICKVAL( Baptism_Age__c , &apos;Infant/Youth&apos;)  &amp;&amp;  NOT( ISBLANK( Date_of_Birth__c ) ) 
, FLOOR((TODAY() - Date_of_Birth__c +1)/365.2425)
, null)</formula>
        <label>Age</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Report_ProfessionOfFaith_Years__c</fullName>
        <description>Profession Of Faith Act performed Years</description>
        <formula>IF(  ISPICKVAL( Act_Performed__c , &apos;Profession of Faith&apos;)  &amp;&amp;  NOT( ISBLANK(  Date_Act_Performed__c  ) ) 
, FLOOR((TODAY() -  Date_Act_Performed__c +1)/365.2425)
, null)</formula>
        <label>ProfessionOfFaith Years</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Report_Transfer_years_completed__c</fullName>
        <description>Report,to count the number of years fot Act performed Transfer</description>
        <formula>IF(  ISPICKVAL( Act_Performed__c , &apos;Transfer&apos;)  &amp;&amp;  NOT( ISBLANK(  Date_Act_Performed__c  ) ) 
, FLOOR((TODAY() - Date_Act_Performed__c  +1)/365.2425)
, null)</formula>
        <label>Transfer years completed</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>State_Other__c</fullName>
        <description>If there are Other States than in States</description>
        <label>State Other</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>State__c</fullName>
        <description>State</description>
        <label>State</label>
        <picklist>
            <picklistValues>
                <fullName>Missing</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>AK</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AZ</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CO</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GU</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HI</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ID</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IN</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>KS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>KY</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>LA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ME</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MH</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MI</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MN</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MO</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Witness1_Name__c</fullName>
        <description>Witness1</description>
        <label>Witness 1 Name</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Witness2_Name__c</fullName>
        <description>Witness 2 Name</description>
        <label>Witness 2 Name</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Zip_Postal_Code__c</fullName>
        <description>Zip Postal Code</description>
        <label>Zip/Postal Code</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <label>Pastoral Acts</label>
    <nameField>
        <displayFormat>Acts-{00000000}</displayFormat>
        <label>Pastoral Act ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Pastoral Acts</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>ActPerformed_BaptismAge</fullName>
        <active>true</active>
        <description>Actperformed Baptism age</description>
        <errorConditionFormula>AND( ISPICKVAL(  Act_Performed__c  ,&apos;Baptism&apos;) , ISBLANK(  TEXT(Baptism_Age__c)  ) )</errorConditionFormula>
        <errorDisplayField>Baptism_Age__c</errorDisplayField>
        <errorMessage>&apos;Baptism Age &apos; must contain a value, if Act performed is &apos;Baptism&apos;.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>BaptismAge_InfantYouth_DOB</fullName>
        <active>true</active>
        <description>If Baptism Age is Infant/Youth, Date of Birth required.</description>
        <errorConditionFormula>AND( ISPICKVAL( Baptism_Age__c ,&apos;Infant/Youth&apos;) , ISBLANK(  Date_of_Birth__c  ) )</errorConditionFormula>
        <errorDisplayField>Date_of_Birth__c</errorDisplayField>
        <errorMessage>&apos;Date Of Birth&apos; must contain a value, if Baptism Age is &apos;Infant/Youth&apos;.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>BaptismAge_NOT_InfantYouth_DOB</fullName>
        <active>true</active>
        <description>If Baptism Age is Infant/Youth, Date of Birth required.</description>
        <errorConditionFormula>AND( NOT(ISPICKVAL( Baptism_Age__c ,&apos;Infant/Youth&apos;)) ,NOT( ISBLANK(  Date_of_Birth__c  ) ))</errorConditionFormula>
        <errorDisplayField>Date_of_Birth__c</errorDisplayField>
        <errorMessage>&apos;Date Of Birth&apos; must not contain a value, if Baptism Age is not &apos;Infant/Youth&apos;.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>BaptismAge_NOT_ParentName</fullName>
        <active>true</active>
        <description>If Baptism age is not Infant Youth then Parents Name should not have a value</description>
        <errorConditionFormula>AND( NOT(ISPICKVAL( Baptism_Age__c ,&apos;Infant/Youth&apos;)) ,NOT( ISBLANK( InfantYouth_Parents_Name__c ) ))</errorConditionFormula>
        <errorDisplayField>InfantYouth_Parents_Name__c</errorDisplayField>
        <errorMessage>&apos;Infant/Youth Parents Name&apos; must not contain a value, if Baptism Age is not &apos;Infant/Youth&apos;.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>BaptismAge_ParentName</fullName>
        <active>true</active>
        <description>If Baptism age is Infant Youth then Parents Name should have a value</description>
        <errorConditionFormula>AND( ISPICKVAL( Baptism_Age__c ,&apos;Infant/Youth&apos;) , ISBLANK( InfantYouth_Parents_Name__c ) )</errorConditionFormula>
        <errorDisplayField>InfantYouth_Parents_Name__c</errorDisplayField>
        <errorMessage>&apos;Infant/Youth Parents Name &apos; must contain a value, if Baptism Age  is &apos;Infant/Youth&apos;.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>State_Other</fullName>
        <active>true</active>
        <description>If the &apos;State&apos; is &apos;Other/Specify&apos;.State other should have value</description>
        <errorConditionFormula>AND( ISPICKVAL(   State__c   ,&quot;Other/Specify&quot;) , ISBLANK( State_Other__c ) )</errorConditionFormula>
        <errorDisplayField>State_Other__c</errorDisplayField>
        <errorMessage>&apos;State Other&apos; must contain a value when State is &apos;Other/Specify&apos;</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>State_Other_Disable</fullName>
        <active>true</active>
        <description>When State is not &apos;Other Specify&apos; .&apos;State other&apos; should not have a value</description>
        <errorConditionFormula>AND(NOT( ISPICKVAL( State__c  ,&quot;Other/Specify&quot;)) ,
NOT( ISBLANK(  State_Other__c  ) ))</errorConditionFormula>
        <errorDisplayField>State_Other__c</errorDisplayField>
        <errorMessage>&apos;State Other&apos; field may not contain a value when State is NOT &apos;Other/Specify&apos;</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>ZipPostalCode</fullName>
        <active>true</active>
        <description>Zip code validation for USA</description>
        <errorConditionFormula>AND( NOT( ISBLANK(Zip_Postal_Code__c) ) ,
NOT(REGEX( Zip_Postal_Code__c ,
&quot;\\d{5}(-\\d{4})?&quot;)))</errorConditionFormula>
        <errorDisplayField>Zip_Postal_Code__c</errorDisplayField>
        <errorMessage>Please enter a valid Zip Postal Code.Zip code must be in 99999 or 99999-9999 format.</errorMessage>
    </validationRules>
</CustomObject>